--- a/STYLiSH/View/Base.lproj/Profile.storyboard
+++ b/STYLiSH/View/Base.lproj/Profile.storyboard
@@ -168,11 +168,11 @@
             <objects>
                 <viewController id="pyH-z4-rbT" customClass="ClientServiceViewController" customModule="STYLiSH" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="LHm-Br-Qsl">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="800"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="輸入訊息" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="P0o-y3-mRh">
-                                <rect key="frame" x="16" y="595" width="279" height="48"/>
+                                <rect key="frame" x="16" y="728" width="279" height="48"/>
                                 <color key="tintColor" name="B1"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="Ou4-yZ-jfc"/>
@@ -182,7 +182,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="w0J-Uv-lH8">
-                                <rect key="frame" x="0.0" y="44" width="375" height="527"/>
+                                <rect key="frame" x="0.0" y="44" width="375" height="660"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ChatServerTableViewCell" id="zeS-LC-7rO" customClass="ChatServerTableViewCell" customModule="STYLiSH" customModuleProvider="target">
@@ -319,10 +319,98 @@
                                             <outlet property="timeLabel" destination="Ily-AR-xV9" id="ZgC-1v-QkU"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ChatServerImageTableViewCell" id="34O-ej-MrA" customClass="ChatServerImageTableViewCell" customModule="STYLiSH" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="272" width="375" height="188"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="34O-ej-MrA" id="Ca6-py-0VV">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="188"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8_technical_support_36" translatesAutoresizingMaskIntoConstraints="NO" id="dim-zC-Do2">
+                                                    <rect key="frame" x="16" y="16" width="36" height="36"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="36" id="ABU-D5-Fd5"/>
+                                                        <constraint firstAttribute="width" secondItem="dim-zC-Do2" secondAttribute="height" multiplier="1:1" id="IPU-Im-YIA"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="UKF-vi-hKz">
+                                                    <rect key="frame" x="16" y="62" width="82" height="110"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="110" id="3wa-p0-4jN"/>
+                                                        <constraint firstAttribute="width" constant="82" id="Yhs-JE-pzL"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8mZ-Ic-nDO">
+                                                    <rect key="frame" x="108" y="152" width="267" height="20"/>
+                                                    <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="14"/>
+                                                    <color key="textColor" name="B1"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="8mZ-Ic-nDO" secondAttribute="trailing" id="0to-em-cdY"/>
+                                                <constraint firstItem="8mZ-Ic-nDO" firstAttribute="bottom" secondItem="UKF-vi-hKz" secondAttribute="bottom" id="5FK-Kk-SXw"/>
+                                                <constraint firstItem="8mZ-Ic-nDO" firstAttribute="leading" secondItem="UKF-vi-hKz" secondAttribute="trailing" constant="10" id="A44-8T-iWW"/>
+                                                <constraint firstItem="dim-zC-Do2" firstAttribute="top" secondItem="Ca6-py-0VV" secondAttribute="top" constant="16" id="KtX-kT-bJc"/>
+                                                <constraint firstAttribute="bottom" secondItem="UKF-vi-hKz" secondAttribute="bottom" constant="16" id="X0B-dV-wzC"/>
+                                                <constraint firstItem="UKF-vi-hKz" firstAttribute="top" secondItem="dim-zC-Do2" secondAttribute="bottom" constant="10" id="bZa-53-iQL"/>
+                                                <constraint firstItem="UKF-vi-hKz" firstAttribute="leading" secondItem="Ca6-py-0VV" secondAttribute="leading" constant="16" id="exc-Q8-hUI"/>
+                                                <constraint firstItem="dim-zC-Do2" firstAttribute="leading" secondItem="Ca6-py-0VV" secondAttribute="leading" constant="16" id="pEc-Zb-pk1"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="serverImageView" destination="UKF-vi-hKz" id="Vib-oG-zv4"/>
+                                            <outlet property="timeLabel" destination="8mZ-Ic-nDO" id="YoJ-Yk-juI"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ChatClientImageTableViewCell" id="nJR-H1-S79" customClass="ChatClientImageTableViewCell" customModule="STYLiSH" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="460" width="375" height="188"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="nJR-H1-S79" id="5Dc-Gg-9Kf">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="188"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile_sticker_placeholder01" translatesAutoresizingMaskIntoConstraints="NO" id="g0g-7n-irF">
+                                                    <rect key="frame" x="323" y="16" width="36" height="36"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="36" id="20L-5J-wsK"/>
+                                                        <constraint firstAttribute="width" secondItem="g0g-7n-irF" secondAttribute="height" multiplier="1:1" id="KkL-dh-VhF"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="C35-oo-Owp">
+                                                    <rect key="frame" x="277" y="62" width="82" height="110"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="110" id="G6E-0M-I2Y"/>
+                                                        <constraint firstAttribute="width" constant="82" id="Kl6-LX-lc8"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JfW-hQ-baE">
+                                                    <rect key="frame" x="231.5" y="152" width="35.5" height="20"/>
+                                                    <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="14"/>
+                                                    <color key="textColor" name="B1"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="C35-oo-Owp" secondAttribute="trailing" constant="16" id="2Jg-9q-6vQ"/>
+                                                <constraint firstItem="C35-oo-Owp" firstAttribute="leading" secondItem="JfW-hQ-baE" secondAttribute="trailing" constant="10" id="3ci-WC-Ryw"/>
+                                                <constraint firstAttribute="trailing" secondItem="g0g-7n-irF" secondAttribute="trailing" constant="16" id="Dae-2Y-rHY"/>
+                                                <constraint firstItem="JfW-hQ-baE" firstAttribute="bottom" secondItem="C35-oo-Owp" secondAttribute="bottom" id="Hhc-vf-1lX"/>
+                                                <constraint firstAttribute="bottom" secondItem="C35-oo-Owp" secondAttribute="bottom" constant="16" id="fEn-R6-Z51"/>
+                                                <constraint firstItem="g0g-7n-irF" firstAttribute="top" secondItem="5Dc-Gg-9Kf" secondAttribute="top" constant="16" id="fME-kk-fn8"/>
+                                                <constraint firstItem="C35-oo-Owp" firstAttribute="top" secondItem="g0g-7n-irF" secondAttribute="bottom" constant="10" id="ibF-Yo-Dlg"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="clientImageView" destination="C35-oo-Owp" id="q4f-y2-8h4"/>
+                                            <outlet property="clientUserImageView" destination="g0g-7n-irF" id="mxC-VO-DDo"/>
+                                            <outlet property="timeLabel" destination="JfW-hQ-baE" id="TFm-Qy-RfC"/>
+                                        </connections>
+                                    </tableViewCell>
                                 </prototypes>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sf5-rd-Piw">
-                                <rect key="frame" x="311" y="595" width="48" height="48"/>
+                                <rect key="frame" x="311" y="728" width="48" height="48"/>
                                 <color key="backgroundColor" name="B4"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="4s3-qD-I4A"/>
@@ -352,6 +440,7 @@
                         <viewLayoutGuide key="safeArea" id="Eyr-8m-SLd"/>
                     </view>
                     <navigationItem key="navigationItem" title="客服訊息" id="2mf-dI-bmT"/>
+                    <size key="freeformSize" width="375" height="800"/>
                     <connections>
                         <outlet property="chatTableView" destination="w0J-Uv-lH8" id="qMU-9Y-5dG"/>
                         <outlet property="inputTextField" destination="P0o-y3-mRh" id="5X6-7s-gWe"/>
@@ -360,7 +449,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vxc-LY-AeA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1789.5999999999999" y="143.47826086956522"/>
+            <point key="canvasLocation" x="1878" y="-32"/>
         </scene>
         <!--歷史訂單-->
         <scene sceneID="TZY-hU-kBu">
