add chat show image

--- a/STYLiSH/View/Base.lproj/Profile.storyboard
+++ b/STYLiSH/View/Base.lproj/Profile.storyboard
@@ -528,7 +528,7 @@
                                                         <constraint firstAttribute="height" priority="750" constant="48" id="9Rk-dc-gOs"/>
                                                     </constraints>
                                                 </stackView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="已完成" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zFv-2H-JAf">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="已取貨" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zFv-2H-JAf">
                                                     <rect key="frame" x="238" y="54.5" width="87" height="44"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="87" id="8HL-ip-0I1"/>
