--- a/STYLiSH/View/Base.lproj/Profile.storyboard
+++ b/STYLiSH/View/Base.lproj/Profile.storyboard
@@ -168,11 +168,11 @@
             <objects>
                 <viewController id="pyH-z4-rbT" customClass="ClientServiceViewController" customModule="STYLiSH" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="LHm-Br-Qsl">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="800"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="1000"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="輸入訊息" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="P0o-y3-mRh">
-                                <rect key="frame" x="16" y="728" width="279" height="48"/>
+                                <rect key="frame" x="16" y="928" width="279" height="48"/>
                                 <color key="tintColor" name="B1"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="Ou4-yZ-jfc"/>
@@ -182,7 +182,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="w0J-Uv-lH8">
-                                <rect key="frame" x="0.0" y="44" width="375" height="660"/>
+                                <rect key="frame" x="0.0" y="44" width="375" height="860"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ChatServerTableViewCell" id="zeS-LC-7rO" customClass="ChatServerTableViewCell" customModule="STYLiSH" customModuleProvider="target">
@@ -192,7 +192,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="122"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8_technical_support_36" translatesAutoresizingMaskIntoConstraints="NO" id="hyz-Re-cVi">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icon-App-40x40" translatesAutoresizingMaskIntoConstraints="NO" id="hyz-Re-cVi">
                                                     <rect key="frame" x="16" y="16" width="36" height="36"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="hyz-Re-cVi" secondAttribute="height" multiplier="1:1" id="ZtM-8F-ah5"/>
@@ -236,7 +236,7 @@
                                                 <constraint firstItem="vHa-yn-2jv" firstAttribute="leading" secondItem="LfL-kF-e4M" secondAttribute="leading" constant="16" id="Ay9-G0-tvQ"/>
                                                 <constraint firstItem="hPe-AQ-hm6" firstAttribute="leading" secondItem="vHa-yn-2jv" secondAttribute="trailing" constant="10" id="B1f-fM-tAe"/>
                                                 <constraint firstItem="XuI-VX-4Nj" firstAttribute="top" secondItem="vHa-yn-2jv" secondAttribute="top" id="XVP-eP-KGT"/>
-                                                <constraint firstAttribute="bottom" secondItem="vHa-yn-2jv" secondAttribute="bottom" constant="16" id="b3f-Gs-qzO"/>
+                                                <constraint firstAttribute="bottom" secondItem="vHa-yn-2jv" secondAttribute="bottom" priority="750" constant="16" id="b3f-Gs-qzO"/>
                                                 <constraint firstItem="hPe-AQ-hm6" firstAttribute="bottom" secondItem="vHa-yn-2jv" secondAttribute="bottom" id="d8M-QO-Uss"/>
                                                 <constraint firstItem="hyz-Re-cVi" firstAttribute="leading" secondItem="LfL-kF-e4M" secondAttribute="leading" constant="16" id="dn5-tA-Grm"/>
                                                 <constraint firstItem="XuI-VX-4Nj" firstAttribute="bottom" secondItem="vHa-yn-2jv" secondAttribute="bottom" id="fRj-eO-8S8"/>
@@ -299,7 +299,7 @@
                                                 </view>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="Slf-01-kZ9" secondAttribute="bottom" constant="16" id="03P-SU-3P4"/>
+                                                <constraint firstAttribute="bottom" secondItem="Slf-01-kZ9" secondAttribute="bottom" priority="750" constant="16" id="03P-SU-3P4"/>
                                                 <constraint firstAttribute="trailing" secondItem="Slf-01-kZ9" secondAttribute="trailing" constant="16" id="2M6-Zz-Imc"/>
                                                 <constraint firstItem="Ily-AR-xV9" firstAttribute="leading" secondItem="yRa-A3-L4P" secondAttribute="trailing" id="8fj-Yz-SLh"/>
                                                 <constraint firstItem="yRa-A3-L4P" firstAttribute="top" secondItem="Slf-01-kZ9" secondAttribute="top" id="9UW-kr-wB0"/>
@@ -320,28 +320,28 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ChatServerImageTableViewCell" id="34O-ej-MrA" customClass="ChatServerImageTableViewCell" customModule="STYLiSH" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="272" width="375" height="188"/>
+                                        <rect key="frame" x="0.0" y="272" width="375" height="302"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="34O-ej-MrA" id="Ca6-py-0VV">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="188"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="302"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8_technical_support_36" translatesAutoresizingMaskIntoConstraints="NO" id="dim-zC-Do2">
-                                                    <rect key="frame" x="16" y="16" width="36" height="36"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icon-App-40x40" translatesAutoresizingMaskIntoConstraints="NO" id="dim-zC-Do2">
+                                                    <rect key="frame" x="16" y="16" width="40" height="40"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="36" id="ABU-D5-Fd5"/>
+                                                        <constraint firstAttribute="height" priority="750" constant="36" id="ABU-D5-Fd5"/>
                                                         <constraint firstAttribute="width" secondItem="dim-zC-Do2" secondAttribute="height" multiplier="1:1" id="IPU-Im-YIA"/>
                                                     </constraints>
                                                 </imageView>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="UKF-vi-hKz">
-                                                    <rect key="frame" x="16" y="62" width="82" height="110"/>
+                                                    <rect key="frame" x="16" y="66" width="164" height="220"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="110" id="3wa-p0-4jN"/>
-                                                        <constraint firstAttribute="width" constant="82" id="Yhs-JE-pzL"/>
+                                                        <constraint firstAttribute="height" constant="220" id="3wa-p0-4jN"/>
+                                                        <constraint firstAttribute="width" constant="164" id="Yhs-JE-pzL"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8mZ-Ic-nDO">
-                                                    <rect key="frame" x="108" y="152" width="267" height="20"/>
+                                                    <rect key="frame" x="190" y="266" width="185" height="20"/>
                                                     <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="14"/>
                                                     <color key="textColor" name="B1"/>
                                                     <nil key="highlightedColor"/>
@@ -360,11 +360,12 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="serverImageView" destination="UKF-vi-hKz" id="Vib-oG-zv4"/>
+                                            <outlet property="serverUserImageView" destination="dim-zC-Do2" id="akT-rF-8PT"/>
                                             <outlet property="timeLabel" destination="8mZ-Ic-nDO" id="YoJ-Yk-juI"/>
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ChatClientImageTableViewCell" id="nJR-H1-S79" customClass="ChatClientImageTableViewCell" customModule="STYLiSH" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="460" width="375" height="188"/>
+                                        <rect key="frame" x="0.0" y="574" width="375" height="188"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="nJR-H1-S79" id="5Dc-Gg-9Kf">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="188"/>
@@ -373,7 +374,7 @@
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile_sticker_placeholder01" translatesAutoresizingMaskIntoConstraints="NO" id="g0g-7n-irF">
                                                     <rect key="frame" x="323" y="16" width="36" height="36"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="36" id="20L-5J-wsK"/>
+                                                        <constraint firstAttribute="height" priority="750" constant="36" id="20L-5J-wsK"/>
                                                         <constraint firstAttribute="width" secondItem="g0g-7n-irF" secondAttribute="height" multiplier="1:1" id="KkL-dh-VhF"/>
                                                     </constraints>
                                                 </imageView>
@@ -410,7 +411,7 @@
                                 </prototypes>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sf5-rd-Piw">
-                                <rect key="frame" x="311" y="728" width="48" height="48"/>
+                                <rect key="frame" x="311" y="928" width="48" height="48"/>
                                 <color key="backgroundColor" name="B4"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="4s3-qD-I4A"/>
@@ -431,7 +432,7 @@
                             <constraint firstItem="w0J-Uv-lH8" firstAttribute="leading" secondItem="Eyr-8m-SLd" secondAttribute="leading" id="3X3-qi-WHQ"/>
                             <constraint firstItem="Eyr-8m-SLd" firstAttribute="bottom" secondItem="P0o-y3-mRh" secondAttribute="bottom" constant="24" id="9ns-yj-LHh"/>
                             <constraint firstItem="P0o-y3-mRh" firstAttribute="leading" secondItem="Eyr-8m-SLd" secondAttribute="leading" constant="16" id="AbO-Y4-KYm"/>
-                            <constraint firstItem="P0o-y3-mRh" firstAttribute="top" secondItem="w0J-Uv-lH8" secondAttribute="bottom" constant="24" id="BdV-yH-Zcm"/>
+                            <constraint firstItem="P0o-y3-mRh" firstAttribute="top" secondItem="w0J-Uv-lH8" secondAttribute="bottom" priority="750" constant="24" id="BdV-yH-Zcm"/>
                             <constraint firstItem="sf5-rd-Piw" firstAttribute="leading" secondItem="P0o-y3-mRh" secondAttribute="trailing" constant="16" id="TDT-HP-Ebg"/>
                             <constraint firstItem="Eyr-8m-SLd" firstAttribute="trailing" secondItem="w0J-Uv-lH8" secondAttribute="trailing" id="VJV-y0-qcI"/>
                             <constraint firstItem="w0J-Uv-lH8" firstAttribute="top" secondItem="Eyr-8m-SLd" secondAttribute="top" id="aPh-jp-mtu"/>
@@ -440,7 +441,7 @@
                         <viewLayoutGuide key="safeArea" id="Eyr-8m-SLd"/>
                     </view>
                     <navigationItem key="navigationItem" title="客服訊息" id="2mf-dI-bmT"/>
-                    <size key="freeformSize" width="375" height="800"/>
+                    <size key="freeformSize" width="375" height="1000"/>
                     <connections>
                         <outlet property="chatTableView" destination="w0J-Uv-lH8" id="qMU-9Y-5dG"/>
                         <outlet property="inputTextField" destination="P0o-y3-mRh" id="5X6-7s-gWe"/>
@@ -1165,7 +1166,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="icons8_technical_support_36" width="18" height="18"/>
+        <image name="Icon-App-40x40" width="40" height="40"/>
         <image name="profile_sticker_placeholder01" width="36" height="36"/>
         <namedColor name="B1">
             <color red="0.24705882352941178" green="0.22745098039215686" blue="0.22745098039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
