modify hud timing user data image

--- a/STYLiSH/View/Base.lproj/Auth.storyboard
+++ b/STYLiSH/View/Base.lproj/Auth.storyboard
@@ -71,7 +71,7 @@
                                         </constraints>
                                         <color key="textColor" name="B1"/>
                                         <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="16"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="uqx-Xb-QMW">
                                         <rect key="frame" x="16" y="273.5" width="343" height="48"/>
@@ -239,7 +239,7 @@
                                         </constraints>
                                         <color key="textColor" name="B1"/>
                                         <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="16"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Check Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="L2P-sG-urY">
                                         <rect key="frame" x="16" y="223" width="343" height="48"/>
@@ -249,7 +249,7 @@
                                         </constraints>
                                         <color key="textColor" name="B1"/>
                                         <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="16"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TpO-GX-cfq">
                                         <rect key="frame" x="16" y="287" width="343" height="48"/>
